--- a/BiologyLabWeb.ini
+++ b/BiologyLabWeb.ini
@@ -5,8 +5,8 @@ master = true
 processes = 5
 
 socket = BiologyLabWeb.sock
-chmod-socket = 660
+chmod-socket = 666
 vacuum = true
 
 die-on-term = true
-logto = /home/log/BiologyLabWeb.log
+logto = /home/web/log/BiologyLabWeb.log
